# makepad-library-sample

./: .gitignore  Cargo.toml  Makefile.toml  Package.swift  README.md  rust-toolchain.toml
android/: settings.gradle.kts
android/MakepadSample/: build.gradle.kts
android/MakepadSample/src/androidTest/kotlin/de/ajoklar/makepadsample/: ExampleInstrumentedTest.kt
android/MakepadSample/src/main/: AndroidManifest.xml
android/MakepadSample/src/main/java/dev/makepad/android/: ByteArrayMediaDataSource.java  MakepadActivity.kt  MakepadNative.java  MakepadNetwork.java  MakepadWebSocket.java  MakepadWebSocketReader.java  VideoPlayer.java  VideoPlayerRunnable.java
android/MakepadSample/src/test/kotlin/de/ajoklar/makepadsample/: ExampleUnitTest.kt
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/de/ajoklar/makepadlibrarysample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/de/ajoklar/makepadlibrarysample/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
iosSample/MakepadLibrarySample/: ContentView.swift  Info.plist  MakepadLibrarySampleApp.swift
iosSample/MakepadLibrarySample.xcodeproj/: project.pbxproj
makepadsample/: Cargo.toml  build.rs
makepadsample/src/: app.rs  lib.rs  makepad_widgets.rs
misc/ios/: makepadsampleFFI.h  makepadsampleFFI.modulemap
swiftpackage/Sources/MakepadSample/: MakepadView.swift
swiftpackage/Tests/MakepadSampleTests/: MakepadSampleTests.swift
(+4 files in other folders)
